引用"superman2014"文件

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,8 @@
     ],
     "require": {},
     "autoload": {
-        "classmap": [
-            "src/"
-        ],
-        "files": [
-            "src/Config.php"
-        ]
+        "psr-4": {
+            "Gutink\\Aliyun\\Core\\Request\\V20180112\\": "src"
+        }
     }
 }
