--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Gutink\\Aliyun\\Core\\Request\\V20180112\\": "src"
+            "Gutink\\Aliyun\\Core\\": "src"
         }
     }
 }
